W-16678830: Update jakarta dependencies in soap-service and http-service